2003-12-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/bindings.tcl (sn_text_default_bindings):
	Add missing close brace that was causing the
	startup scripts to fail.

2003-12-06  Mo DeJong  <mdejong@users.sourceforge.net>

	Add SN-52B1-2003-12-06 tag.

	* NEWS: Add news item for b1 release.
	* configure: Regen.
	* configure.in: Update version number to 5.2b1.

2003-12-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/bindings.tcl (sn_treetable_bindings,
	sn_text_default_bindings, sn_canv_goto_bindings):
	Implement MouseWheel binding for Win32 and
	Button 4/5 button scroll bindings for
	X11 based systems. Based on patches submitted
	by Brad Forden and John Lash. [Bug 814341]

2003-12-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* db/dbutils.c (db_remove_file_def): Rework
	the function that removes all symbols for
	a given file name so that it uses the symbol
	highlight start position instead of the
	symbol start position. This is needed to match
	the implementation change in put_symbol made
	on 2003-07-22. With this change, symbols are
	correctly deleted from tables like cl and fu
	when the containing file is reparsed.

2003-11-30  Mo DeJong  <mdejong@users.sourceforge.net>

	* demo/Makefile.am: 2nd attempt at removing
	GNU tar dep. It seems Solaris tar does not
	like 2 sets of command line flags, so combine
	then into one set of options.
	* demo/Makefile.in: Regen.

2003-11-30  Mo DeJong  <mdejong@users.sourceforge.net>

	Remove dep on GNU tar for `make install`. [Bug 807708]

	* INSTALL.TXT: Remove note about GNU tar since
	it is no longer needed to run `make install`.
	* NEWS: Add items for upcoming b1 release.
	* demo/Makefile.am: Remove use of -X flag to
	tar since that meant we depended on GNU tar
	being on the PATH.
	* demo/Makefile.in: Regen.

2003-11-29  Mo DeJong  <mdejong@users.sourceforge.net>

	* INSTALL.TXT: Add note about the requirement
	of having GNU tar on the path before installing.
